--- a/index.html
+++ b/index.html
@@ -18,37 +18,6 @@
 	</header>
 
 	<main>
-        <!-- <section id="home">
-		<aside style="float: left;">
-			<h2>Categories</h2>
-			<ul>
-                <li><a href="#home">Home</a></li>
-				<li><a href="#about">About Me</a></li>
-				<li><a href="#skills">Skills</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</aside>
-
-        <article>
-            <h2>Home</h2>
-            <p>個人的なホームページに来ていただいてありがとうございます。</p>
-
-            <h2>自己紹介</h2>
-            <p><strong>名前:</strong> 武次 豪士</p>
-            <p><strong>年齢:</strong> 23歳</p>
-            <p><strong>趣味:</strong> ゲーム, 新しい技術を見たり試すこと</p>
-
-			<h2>Skills</h2>
-			<ul>
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>python</li>
-                <li>AviUtl</li>
-                <li>機械学習: 自然言語処理, 画像処理, 強化学習, 遺伝的アルゴリズム</li>
-			</ul>
-
-        </article>
-        </section> -->
 
         <div class="wrap">
             <div class = "sideber">
@@ -84,7 +53,7 @@
                     <li>HTML/CSS (簡単なホームページ作成)</li>
                     <li>python</li>
                     <li>AviUtl</li>
-                    <li>機械学習: 自然言語処理/画像処理/強化学習/遺伝的アルゴリズム</li>
+                    <li>機械学習(AI): 自然言語処理/画像処理/強化学習/遺伝的アルゴリズム</li>
                 </ul>
                 <h2 id="abstract">研究概要</h2>
                 <p>現在注目を集めている人工ニューラルネットワークは勾配法を基にした探索でパラメータの学習を行っている</p>
@@ -134,52 +103,7 @@
 
             </div>
         </div>
-        <!-- <section id="home">
-			<h2>Home</h2>
-			<p>個人的なホームページに来ていただいてありがとうございます。</p>
-		</section> -->
 
-		<!-- <section id="about">
-			<h2>About Me</h2>
-			<h3>name</h3>
-            <p>武次 豪士</p> 
-		</section> -->
-
-        <!-- <section id="about", class="introduction">
-            <h2>自己紹介</h2>
-            <div class="profile">
-              <p><strong>名前:</strong> 武次 豪士</p>
-              <p><strong>年齢:</strong> 23歳</p>
-              <p><strong>趣味:</strong> ゲーム, 新しい技術を見たり試すこと</p>
-            </div>
-        </section> -->
-          
-        <!-- <section id="skills">
-			<h2>Skills</h2>
-			<ul>
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>python</li>
-                <li>AviUtl</li>
-                <li>機械学習: 自然言語処理, 画像処理, 強化学習, 遺伝的アルゴリズム</li>
-			</ul>
-		</section> -->
-
-
-
-		<!-- <section>
-			<h2>Portfolio</h2>
-			<ul>
-				<li><a href="#">Project 1</a></li>
-				<li><a href="#">Project 2</a></li>
-				<li><a href="#">Project 3</a></li>
-			</ul>
-		</section> -->
-
-		<!-- <section id="contact">
-			<h2>Contact Me</h2>
-			<p>Email: ktaketu@gmail.com</p>
-		</section> -->
 	</main>
 
 	<footer>
